--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet"> 
 	<link href="main.css" rel="stylesheet">
-  <title>React App</title>
+  <title>Weather</title>
 </head>
 <body>
   <div id="root"></div>
